--- a/bibliography.bib
+++ b/bibliography.bib
@@ -79,3 +79,11 @@
   available = {https://aws.amazon.com/step-functions/pricing/},
   accessed = {2023-02-01}
 }
+
+@online{CICD,
+  author = {about.gitlab.com. (n.d.)},
+  title = {What is CI/CD?},
+  year = {2023},
+  available = {https://about.gitlab.com/topics/ci-cd/},
+  accessed = {2023-02-01}
+}
